# docs/swagger.json
@@ -4,8 +4,8 @@
     ],
     "swagger": "2.0",
     "info": {
-        "description": "A part of microservice infrastructure, who responsible for user entity.",
-        "title": "User Service",
+        "description": "A part of microservice infrastructure, who responsible for customer user entity.",
+        "title": "Customer Service",
         "contact": {
             "name": "Artem Kostenko",
             "url": "https://github.com/aerosystems"
@@ -16,7 +16,7 @@
         },
         "version": "1.0.0"
     },
-    "host": "gw.verifire.com/user",
+    "host": "gw.verifire.com/customer",
     "basePath": "/",
     "paths": {
         "/v1/users": {
@@ -49,7 +49,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.User"
+                                            "$ref": "#/definitions/models.Customer"
                                         }
                                     }
                                 }
@@ -88,16 +88,10 @@
                 }
             }
         },
-        "models.User": {
+        "models.Customer": {
             "type": "object",
             "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "role": {
+                "uuid": {
                     "type": "string"
                 }
             }
