# internal/handlers/customers.go
@@ -13,14 +13,14 @@ import (
 // @Accept  json
 // @Produce application/json
 // @Security BearerAuth
-// @Success 200 {object} Response{data=models.User}
+// @Success 200 {object} Response{data=models.Customer}
 // @Failure 401 {object} Response
 // @Failure 403 {object} Response
 // @Failure 500 {object} Response
 // @Router /v1/users [get]
 func (h *BaseHandler) GetCustomer(c echo.Context) error {
 	accessTokenClaims := c.Get("accessTokenClaims").(services.AccessTokenClaims)
-	user, err := h.userService.GetUserById(int(accessTokenClaims.UserId))
+	user, err := h.userService.GetUserById(accessTokenClaims.UserId)
 	if err != nil {
 		return h.ErrorResponse(c, http.StatusInternalServerError, "could not get user", err)
 	}
